# parallel-ivf

./: .gitignore  CMakeLists.txt  README.md  build.sh  driver.sh  example.py  requirements.txt
ghc-results/easy/: easy_IVFCacheCandidateParallel.csv  easy_IVFCacheQueryParallel.csv  easy_IVFCacheSIMDCandidateParallel.csv  easy_IVFCacheSIMDQueryParallel.csv  easy_IVFCacheV2QueryParallel.csv  easy_IVFCacheV2SIMDQueryParallel.csv  easy_IVFSIMDCandidateParallel.csv  easy_IVFSIMDQueryParallel.csv  easy_IVFScalarCandidateParallel.csv  easy_IVFScalarQueryParallel.csv
ghc-results/extreme/: extreme_IVFCacheCandidateParallel.csv  extreme_IVFCacheQueryParallel.csv  extreme_IVFCacheSIMDCandidateParallel.csv  extreme_IVFCacheSIMDQueryParallel.csv  extreme_IVFCacheV2QueryParallel.csv  extreme_IVFCacheV2SIMDQueryParallel.csv  extreme_IVFSIMDCandidateParallel.csv  extreme_IVFSIMDQueryParallel.csv  extreme_IVFScalarCandidateParallel.csv  extreme_IVFScalarQueryParallel.csv
ghc-results/hard/: hard_IVFCacheCandidateParallel.csv  hard_IVFCacheQueryParallel.csv  hard_IVFCacheSIMDCandidateParallel.csv  hard_IVFCacheSIMDQueryParallel.csv  hard_IVFCacheV2QueryParallel.csv  hard_IVFCacheV2SIMDQueryParallel.csv  hard_IVFSIMDCandidateParallel.csv  hard_IVFSIMDQueryParallel.csv  hard_IVFScalarCandidateParallel.csv  hard_IVFScalarQueryParallel.csv
ghc-results/medium/: medium_IVFCacheCandidateParallel.csv  medium_IVFCacheQueryParallel.csv  medium_IVFCacheSIMDCandidateParallel.csv  medium_IVFCacheSIMDQueryParallel.csv  medium_IVFCacheV2QueryParallel.csv  medium_IVFCacheV2SIMDQueryParallel.csv  medium_IVFSIMDCandidateParallel.csv  medium_IVFSIMDQueryParallel.csv  medium_IVFScalarCandidateParallel.csv  medium_IVFScalarQueryParallel.csv
psc-results/easy/: easy_IVFCacheCandidateParallel.csv  easy_IVFCacheQueryParallel.csv  easy_IVFCacheSIMDCandidateParallel.csv  easy_IVFCacheSIMDQueryParallel.csv  easy_IVFCacheV2QueryParallel.csv  easy_IVFCacheV2SIMDQueryParallel.csv  easy_IVFSIMDCandidateParallel.csv  easy_IVFSIMDQueryParallel.csv  easy_IVFScalarCandidateParallel.csv  easy_IVFScalarQueryParallel.csv
psc-results/extreme/: extreme_IVFCacheCandidateParallel.csv  extreme_IVFCacheQueryParallel.csv  extreme_IVFCacheSIMDCandidateParallel.csv  extreme_IVFCacheSIMDQueryParallel.csv  extreme_IVFCacheV2QueryParallel.csv  extreme_IVFCacheV2SIMDQueryParallel.csv  extreme_IVFSIMDCandidateParallel.csv  extreme_IVFSIMDQueryParallel.csv  extreme_IVFScalarCandidateParallel.csv  extreme_IVFScalarQueryParallel.csv
psc-results/gist/: gist_IVFCacheCandidateParallel.csv  gist_IVFCacheQueryParallel.csv  gist_IVFCacheSIMDCandidateParallel.csv  gist_IVFCacheSIMDQueryParallel.csv  gist_IVFCacheV2QueryParallel.csv  gist_IVFCacheV2SIMDQueryParallel.csv  gist_IVFSIMDCandidateParallel.csv  gist_IVFSIMDQueryParallel.csv  gist_IVFScalarCandidateParallel.csv  gist_IVFScalarQueryParallel.csv
psc-results/hard/: hard_IVFCacheCandidateParallel.csv  hard_IVFCacheQueryParallel.csv  hard_IVFCacheSIMDCandidateParallel.csv  hard_IVFCacheSIMDQueryParallel.csv  hard_IVFCacheV2QueryParallel.csv  hard_IVFCacheV2SIMDQueryParallel.csv  hard_IVFSIMDCandidateParallel.csv  hard_IVFSIMDQueryParallel.csv  hard_IVFScalarCandidateParallel.csv  hard_IVFScalarQueryParallel.csv
psc-results/medium/: medium_IVFCacheCandidateParallel.csv  medium_IVFCacheQueryParallel.csv  medium_IVFCacheSIMDCandidateParallel.csv  medium_IVFCacheSIMDQueryParallel.csv  medium_IVFCacheV2QueryParallel.csv  medium_IVFCacheV2SIMDQueryParallel.csv  medium_IVFSIMDCandidateParallel.csv  medium_IVFSIMDQueryParallel.csv  medium_IVFScalarCandidateParallel.csv  medium_IVFScalarQueryParallel.csv
results/extreme/: extreme_IVFCacheSIMDQueryParallel.csv  extreme_IVFSIMDCandidateParallel.csv  extreme_IVFSIMDQueryParallel.csv
src/: IVF.cpp  IVF.h  IVFBase.cpp  IVFBase.h  IVFSerial.cpp  IVFSerial.h  distances.cpp  distances.h  kmeans.cpp  kmeans.h  main.cpp  python_bindings.cpp
tables/: ghc_easy_speedup_table_1.csv  ghc_extreme_speedup_table_1.csv  ghc_hard_speedup_table_1.csv  ghc_medium_speedup_table_1.csv  psc_easy_speedup_table_1.csv  psc_extreme_speedup_table_1.csv  psc_gist_speedup_table_1.csv  psc_hard_speedup_table_1.csv  psc_medium_speedup_table_1.csv
tests/: bench.py  correct.py  eval.py  generate_plots.sh  test_ivf.py  test_kmeans.py  test_serial.cpp  utils.py  visualize.py
tests/results/easy/: results_easy_IVFBase.csv  results_easy_IVFCache.csv  (+10 more)
(+1 files in other folders)
